feat(artifact): 同步锁定与快速装备方案
- 在 fork 最新养成账本与脚本同步基线上保留配装刷新隔离
- 拆分套装锁定与角色快速装备的 Build 选择状态
- 按 Build 编译主属性及权重大于 0.8 的副属性
- 限制每套装三个锁定方案与每角色两个快速装备方案

验证:
- Maven 养成与圣遗物兼容测试 72 项通过
- 前端 artifact 与 cultivation 测试 53 项通过
- Vite 生产构建通过